# agent-evaluation-arena

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/: evaluation.json
src/agent_arena/: __init__.py  api.py  graders.py  models.py  service.py  stats.py  store.py
src/agent_evaluation_arena.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_graders.py  test_service.py
web/: Dockerfile  package-lock.json  package.json
web/app/: layout.tsx  page.tsx  styles.css
